Add card game system to JavaScript.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1>Build A Deck</h1>
       </div>
       <div class="main">
+        <button type="submit" id="getTwoCards" class="btn btn-success">Get Cards</button>
         <ul>
         </ul>
       </div>
